--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "cors": "^2.8.5",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
